add_subdirectory(joypad_manager)
add_subdirectory(gui)
add_subdirectory(diagnostic_manager)

if (BUILD_ARM)
    add_subdirectory(servo_manager)
    add_subdirectory(led_manager)
    add_subdirectory(tcp_server_test)
    add_subdirectory(tcp_client_test)
    add_subdirectory(gui_gateway)
    # add_subdirectory(ultrasonic_sensor_manager)
endif ()